edited docs and updated index with correct links

--- a/Specdrums/index.html
+++ b/Specdrums/index.html
@@ -20,20 +20,20 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="https://fahmed3.github.io/Specdrums/">Specdrums</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Demo <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="https://fahmed3.github.io/Specdrums/">Demo <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Documentation</a>
+            <a class="nav-link" href="https://fahmed3.github.io/Specdrums/docs">Documentation</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Github</a>
+            <a class="nav-link" href="https://github.com/fahmed3/fahmed3.github.io/tree/master/Specdrums">Github</a>
           </li>
         </ul>
       </div>
