--- a/Specdrums/docs.html
+++ b/Specdrums/docs.html
@@ -26,11 +26,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="https://fahmed3.github.io/Specdrums/">Demo</a>
-          </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://fahmed3.github.io/Specdrums/docs">Documentation<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="https://fahmed3.github.io/Specdrums/">Demo<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="https://fahmed3.github.io/Specdrums/docs">Documentation</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://github.com/fahmed3/fahmed3.github.io/tree/master/Specdrums">Github</a>
