--- a/Specdrums/index.html
+++ b/Specdrums/index.html
@@ -41,18 +41,18 @@
     <div class="container-fluid">
       <div id="wrap" style="padding:1em 5em">
         <h1> Demo </h1>
-        <p> Click the button below to connect your Specdrums, one at a time.</p> <br>
+        <p> Click the button below. Choose a Specdrum from the list in the box and wait for it to connect. Connect as many Specdrums as you'd like.</p> <br>
     
         <hr>
         <!-- navbar with github, fabiha's page. footer ath the botto with descritpion about project (copy from poster) -->
         <button id="btn" class="btn btn-primary btn-large"> Connect Specdrum </button>
         <div id="synth" style="display:none;">
-          <h5 class="settings"> </h5>
+          <h5 class="settings" style="margin:10px"> </h5>
           <div class="container">
             <div class="row">
-              <div class="col-sm">
+              <div class="col-sm" style="margin-top: 25px">
                 <div class="dropdown">
-                  <a class="btn btn-secondary dropdown-toggle ddKey" href="#" role="button" id="dropdownKey" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <a class="btn btn-dark dropdown-toggle ddKey" href="#" role="button" id="dropdownKey" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Key: C
                   </a>
                   <div class="dropdown-menu" aria-labelledby="dropdownKey">
@@ -66,9 +66,9 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm">
+              <div class="col-sm" style="margin-top: 25px">
                 <div class="dropdown">
-                  <a class="btn btn-secondary dropdown-toggle ddSynth" href="#" role="button" id="dropdownSynth" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <a class="btn btn-dark dropdown-toggle ddSynth" href="#" role="button" id="dropdownSynth" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Synth: Default
                   </a>
                   <div class="dropdown-menu" aria-labelledby="dropdownSynth">
@@ -79,7 +79,13 @@
                 </div>
               </div>
               <div class="col-sm">
-                 
+                <svg width="10em" height="8em" viewBox="0 2 16 16" class="bi bi-volume-off-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path class="volume-up name" style="display:none" d="M11.536 14.01A8.473 8.473 0 0 0 14.026 8a8.473 8.473 0 0 0-2.49-6.01l-.708.707A7.476 7.476 0 0 1 13.025 8c0 2.071-.84 3.946-2.197 5.303l.708.707z"/>
+                  <path class="volume-up name" style="display:none" d="M10.121 12.596A6.48 6.48 0 0 0 12.025 8a6.48 6.48 0 0 0-1.904-4.596l-.707.707A5.483 5.483 0 0 1 11.025 8a5.483 5.483 0 0 1-1.61 3.89l.706.706z"/>
+                  <path class="volume-up name" style="display:none" d="M8.707 11.182A4.486 4.486 0 0 0 10.025 8a4.486 4.486 0 0 0-1.318-3.182L8 5.525A3.489 3.489 0 0 1 9.025 8 3.49 3.49 0 0 1 8 10.475l.707.707z"/>
+                  <!-- <path fill-rule="evenodd" d="M10.717 3.55A.5.5 0 0 1 11 4v8a.5.5 0 0 1-.812.39L7.825 10.5H5.5A.5.5 0 0 1 5 10V6a.5.5 0 0 1 .5-.5h2.325l2.363-1.89a.5.5 0 0 1 .529-.06z"/> -->
+                  <path fill-rule="evenodd" d="M6.717 3.55A.5.5 0 0 1 7 4v8a.5.5 0 0 1-.812.39L3.825 10.5H1.5A.5.5 0 0 1 1 10V6a.5.5 0 0 1 .5-.5h2.325l2.363-1.89a.5.5 0 0 1 .529-.06z"/>
+                </svg>
               </div>
             </div>
           </div>
